k8s/guild-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guild
  labels:
    app: guild
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guild
  template:
    metadata:
      labels:
        app: guild
    spec:
      containers:
      - name: guild
        image: vincentramaputra/viscord-guild-service:sha-89f221a
        ports:
        - containerPort: 3000
          name: http
