k8s/guild-service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guild
  labels:
    app: guild
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`viscord.local`) && (PathPrefix(`/api/guilds`) || PathPrefix(`/api/users/me/channels`) || PathPrefix(`/api/invites`) || (PathPrefix(`/api/channels`) && !PathRegexp(`^/api/channels/.+/messages`))
      services:
        - name: guild
          port: 3000
      middlewares:
        - name: strip-api-prefix
        - name: forward-auth
